2008-08-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.6 ===

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Pass appropriate -machine flag to lib.exe.

2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c (_gdk_pixbuf_get_module): Compare two content
	types, not content type and mime type.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.5 ===

2008-07-18  Federico Mena Quintero  <federico@novell.com>

	* queryloaders.c (query_module): Don't do funny casts to avoid
	compiler warnings.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 543085 – gdk_pixbuf_saturate_and_pixelate may corrupt memory

	* gdk-pixbuf-utils.c (gdk_pixbuf_saturate_and_pixelate):
	Use gdk_pixbuf_copy_area() to copy between pixbufs.
	Reported by Andrey Tsyvarev

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c: Move the check for wheter to use 
	GIO for sniffing to configure.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 401985 – Documentation improvement for the
	gdk_pixbuf_new_from_file_at_scale() function

	* gdk-pixbuf-io.c: Improve docs for gdk_pixbuf_new_from_file_at_scale().
	Proposed by Juan Manuel Palacios

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c: Use GIO for sniffing image types, except
	on Win32, where GIO doesn't do any sniffing.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.4 ===

2008-06-18  Matthias Clasen  <mclasen@redhat.com>

	* io-ico.c: Add image/x-win-bitmap to the supported mimetypes,
	since that is what shared-mime-info uses for .cur

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.3 ===

2008-06-13  Hans Breuer  <hans@breuer.org>

	* makefile.msc : updated to allow simple switch between gdiplus- and
	former fileformat backends
	* io-tiff.c : use g_snprintf

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 531960 – crash in eog-image.c:1154: (priv->image != NULL)
